# secure-ai-toolset

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GETTING_STARTED-movedtodocs.md  GETTING_STARTED.md  NOTICES.md  NOTICES.txt  README-old.md  README.md  SECURITY.md  __init__.py  code_check.bash  code_clean.bash  config_example.json  docker_proxy.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_servers.sh
.github/workflows/: gitleaks.yml  release.yml
agent_guard_core/: cli.md  cli.py
agent_guard_core/api/identity/: handler.py
agent_guard_core/cli/: cli.py  consts.py  idp_cli.py  login_idp.py  mcp_proxy.py  mcp_proxy_cli.py  secrets.py  sia_postgresdb_cli.py
agent_guard_core/config/: config_manager.py
agent_guard_core/credentials/: README.md  aws_secrets_manager_provider.py  conjur_secrets_provider.py  enum.py  environment_manager.py  file_secrets_provider.py  foo  gcp_secrets_manager_provider.py  secrets_provider.py
agent_guard_core/handlers/idp/: consts.py  handler.py
agent_guard_core/model/: secret_uri.py
agent_guard_core/proxy/: audited_proxy.py  logging.py  proxy_utils.py
agent_guard_core/utils/: mcp_config_wizard.py
docs/: README.md  agent-guard-containerized.md  agent-guard-mcp-proxy.md  agent-guard-pipy.md  agent-guard-secrets-docker.md  agent-guard-secrets-python  agent-guard-secrets-python.md  agent-guard-secrets-retrieval-lp.md
examples/autogen-agent/: README.md  autogen_openai_agent.py  pyproject.toml
examples/autogen-agent/src/: autogen_openai_agent.py
examples/autogen/environment_variables_populate/: README.md  autogen_agent_example1.py  autogen_agent_example2.py  autogen_agent_example3.py  autogen_common.py
examples/openai/basic/: main.py
scripts/: code_clean.bash  increment_version.py  publish.bash
secure-ai-toolset/secrets/: aws_secrets_provider.py  conjur_secrets_provider.py  secrets_provider.py
secure_ai_toolset/credentials/: README.md  conjur_secrets_provider.py  environment_manager.py  file_secrets_provider.py
secure_ai_toolset/secrets/: README.md  aws_secrets_manager_provider.py  aws_secrets_provider.py  aws_ssm_provider.py  conjur_secrets_provider.py  environment_manager.py  file_secrets_provider.py  secrets_provider.py
servers/: README.md  common.py
servers/admin_ui/: common.py  landing.py
servers/admin_ui/models/: server_config.py
servers/admin_ui/pages/: configuration.py  env_vars_editor.py  management.py  secrets_editor.py
servers/api_servers/: main.py  requirements.txt
servers/api_servers/routers/: config.py  default.py  environment_variables.py  secrets.py
tests/integration/: README.md  aws_secret_manager_provider_test.py  conjur_provider_test.py  environment_variables_manager_test.py  environment_variables_managet_test.py  file_secret_provider_test.py  gcp_secret_manager_provider_test.py  secrets_provider_test.py  test_cli_integration.py  test_config_manager_integration.py  test_proxy.py
tests/unit/: test_aws_secret_manager_provider.py  test_base_secrets_provider.py  test_config_manager.py  test_conjur_provider.py  test_idp_handler.py  test_secrets_provider.py
