[project]
name = "agent-guard-core"
version = "0.1.0"
description = "Python library to secure AI agents with environment credentials from multiple secret providers and more"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "CyberArk", email = "cyberark@cyberark.com" },
    { name = "Gil Adda", email = "gil.adda@cyberark.com" },
    { name = "Rafi Schwartz", email = "rafi.schwartz@cyberark.com" }
]
packages = [
    { include = "agent_guard_core" },
]
keywords = ["security", "AI", "secrets"]
repository = "https://github.com/cyberark/agent-guard"
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "python-dotenv",
     "requests"
]


[tool.semantic_release.main]
branch = "main"
version_variable = ["pyproject.toml:version"]
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.optional-dependencies]
dev = [
    "uv",
    "pytest",
    "yapf",
    "isort",
    "autoflake",
    "toml",
    "twine",
    "python-semantic-release",
    "bandit",
    "twine"
]
servers = [
    "uvicorn", "streamlit", "fastapi", "pandas"
]
autogen = [ "autogen-core", "autogen-ext[openai]" ]
