[project]
name = "agent-guard-core"
version = "0.1.0"
description = "Python library to secure AI agents with environment credentials from multiple secret providers and more"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "CyberArk", email = "cyberark@cyberark.com" },
    { name = "Gil Adda", email = "gil.adda@cyberark.com" },
    { name = "Rafi Schwartz", email = "rafi.schwartz@cyberark.com" }
]
packages = [
    { include = "agent_guard_core" },
]
keywords = ["security", "AI", "secrets"]
repository = "https://github.com/cyberark/agent-guard"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "requests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
agent-guard = "agent_guard_core.cli:cli"

[project.optional-dependencies]
dev = [
    "uv",
    "pytest",
    "yapf",
    "isort",
    "autoflake",
    "toml",
    "twine",
    "python-semantic-release",
    "bandit",
    "twine",
    "pylint",
    "vulture",
]
servers = [
    "uvicorn", "streamlit", "fastapi", "pandas"
]
autogen = [ "autogen-core", "autogen-ext[openai]" ]

aws = ["boto3"]

openai = ["h2>=4.2.0", "httpx>=0.28.1",]
