[project]
name = "agent-guard-core"
version = "0.1.0"
description = "Python library to secure AI agents with environment credentials from multiple secret providers and more"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "CyberArk", email = "cyberark@cyberark.com" },
    { name = "Gil Adda", email = "gil.adda@cyberark.com" },
    { name = "Rafi Schwartz", email = "rafi.schwartz@cyberark.com" },
    { name = "Tomer Shtilman", email = "tomer.shtilman@cyberark.com" }
]
packages = [
    { include = "agent_guard_core" },
]
keywords = ["security", "AI", "secrets"]
repository = "https://github.com/cyberark/agent-guard"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "requests",
    "click",
    "boto3",
    "google-cloud-secret-manager",
    "mcp>=1.9.1",
    "mcp-proxy>=0.8.0",
    "keyring>=25.6.0",
    "pkce>=1.0.3",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
agc = "agent_guard_core.cli.cli:cli"

[project.optional-dependencies]
dev = [
    "uv",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "yapf",
    "isort",
    "autoflake",
    "toml",
    "twine",
    "python-semantic-release",
    "bandit",
    "vulture",
    "mypy>=1.16.1",
]
servers = [
    "uvicorn", "streamlit", "fastapi", "pandas"
]

examples = [ "autogen-core", "autogen-ext", "h2>=4.2.0", "httpx>=0.28.1" ]
