[project]
name = "autogen-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "GilAddaCyberArk",email = "gil.adda@cyberark.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"

[tool.poetry.dependencies]
secure-ai-toolset = ">=0.0.7,<0.0.8"
autogen-core = ">=0.4.9.2,<0.5.0.0"
autogen-ext = {extras = ["openai"], version = "^0.4.9.2"}



[build-system]
requires = ["poetry-core>=1.8.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
